crates/keron-lang/tests/corpus/errors/check/nullable_in_interpolation.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: cannot interpolate a `String?` directly; `match` it to extract the inhabitant first
  --> 3:33
  |
3 | val greeting: String = "hello ${maybe_name}"
  |                                 ^^^^^^^^^^
